--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="#">
+                    <a href="minecraft.html">
                         <img src="sources/Minecraft.jpg" class="d-block w-100" alt="Minecraft">
                     </a>
                 </div>
