--- a/elden_ring.html
+++ b/elden_ring.html
@@ -18,24 +18,36 @@
     <div class="stars5"></div>
 
     
-    <div class="container-fluid">
+    <div class="container-fluid" style="z-index: 9999; position: relative;">
         <nav class="navbar">
-            <!-- <div class="container"> -->
-                <div class="logo-container nav justify-content-end">  <!-- Wrapper for the logo -->
-                    <a href="index.html" class="navbar-brand">
-                        <img src="sources/Top G.png" alt="TopG Logo" class="logo">
+            <div class="logo-container nav justify-content-end">
+                <a href="index.html" class="navbar-brand">
+                    <img src="sources/Top G.png" alt="TopG Logo" class="logo">
+                </a>
+            </div>
+            <ul class="nav-links nav justify-content-end">
+                <li><a class="minecraft-title" href="index.html">Home</a></li>
+                <li><a class="minecraft-title" href="#trailer">Trailer</a></li>
+                <li><a class="minecraft-title" href="#info">Info</a></li>
+                <li class="dropdown">
+                    <a class="minecraft-title dropdown-toggle" 
+                       href="#" role="button" 
+                       data-bs-toggle="dropdown" 
+                       aria-expanded="false">
+                        Games
                     </a>
-                </div>
-                <ul class="nav-links  nav justify-content-end">
-                    <li><a class="minecraft-title" href="index.html">Home</a></li>
-                    <!-- <li><a href="#">Games</a></li> -->
-                    <li><a class="minecraft-title" href="#trailer">Trailer</a></li>
-                    <li><a class="minecraft-title" href="#info">Info</a></li>
-                </ul>
-            <!-- </div> -->
+                    <ul class="dropdown-menu minecraft-description" style="z-index: 10000; position: absolute;">
+                        <li><a style="font-size: 14px !important;" class="dropdown-item" href="elden_ring.html">Elden Ring</a></li>
+                        <li><a style="font-size: 14px !important;" class="dropdown-item" href="marvel_rivals.html">Marvel Rivals</a></li>
+                        <li><a style="font-size: 14px !important;" class="dropdown-item" href="minecraft.html">Minecraft</a></li>
+                        <li><a style="font-size: 14px !important;" class="dropdown-item" href="roblox.html">Roblox</a></li>
+                        <li><a style="font-size: 14px !important;" class="dropdown-item" href="overwatch.html">Overwatch</a></li>
+                    </ul>
+                </li>
+            </ul>
         </nav>
     </div>
-
+    
 
 <br>
 <br>
