--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
 
@@ -16,7 +18,7 @@
     <div class="stars4"></div>
     <div class="stars5"></div>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="z-index: 9999; position: relative;">
         <nav class="navbar">
             <!-- <div class="container"> -->
                 <div class="logo-container nav justify-content-end">  <!-- Wrapper for the logo -->
@@ -28,8 +30,22 @@
                     <li><a class="minecraft-title" href="index.html">Home</a></li>
                     <li><a class="minecraft-title" href="#about">About</a></li>
                     <li><a class="minecraft-title" href="#games">Games</a></li>
+                    <li class="dropdown">
+                        <a class="minecraft-title dropdown-toggle" 
+                           href="#" role="button" 
+                           data-bs-toggle="dropdown" 
+                           aria-expanded="false">
+                            List
+                        </a>
+                        <ul class="dropdown-menu minecraft-description" style="z-index: 10000; position: absolute;">
+                            <li><a style="font-size: 14px !important;" class="dropdown-item" href="elden_ring.html">Elden Ring</a></li>
+                            <li><a style="font-size: 14px !important;" class="dropdown-item" href="marvel_rivals.html">Marvel Rivals</a></li>
+                            <li><a style="font-size: 14px !important;" class="dropdown-item" href="minecraft.html">Minecraft</a></li>
+                            <li><a style="font-size: 14px !important;" class="dropdown-item" href="roblox.html">Roblox</a></li>
+                            <li><a style="font-size: 14px !important;" class="dropdown-item" href="overwatch.html">Overwatch</a></li>
+                        </ul>
+                    </li>
                 </ul>
-            <!-- </div> -->
         </nav>
     </div>
 
