Commit file to main

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a class="minecraft-title" href="index.html">Home</a></li>
                     <li><a class="minecraft-title" href="#about">About</a></li>
                     <li><a class="minecraft-title" href="#games">Games</a></li>
+                    <li><a class="minecraft-title" href="more.html">More</a></li>
                     <li class="dropdown">
                         <a class="minecraft-title dropdown-toggle" 
                            href="#" role="button" 
